@@ -1,3 +1,9 @@
+2004-04-13  Theodore A. Roth  <troth@openavr.org>
+[Contributed by Bob Paddock <bpaddock@csonline.net>]
+
+	* configure.in (AM_INIT_AUTOMAKE): Bump version.
+	* include/avr/iotn2313.h: New file.
+
 2004-04-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* doc/api/faq.dox: Cosmetics: update (C) year, remove some
